--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,13 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "firebase": "^3.6.4",
+    "node-sass": "^4.0.0",
     "react-dom": "^15.4.1",
     "redux-thunk": "^2.1.0",
+    "sass-loader": "^4.1.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   },
   "scripts": {
