--- a/app/package.json
+++ b/app/package.json
@@ -16,15 +16,19 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
     "firebase": "^3.6.4",
     "node-sass": "^4.0.0",
     "react-dom": "^15.4.1",
+    "react-hot-loader": "^1.3.1",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
+    "start": "webpack-dev-server --hot --inline --content-base build/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
