--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
+    "firebase-admin": "^4.0.4",
     "request": "^2.79.0",
     "require": "^2.4.20"
   },
