--- a/app/package.json
+++ b/app/package.json
@@ -19,8 +19,12 @@
     "file-loader": "^0.9.0",
     "firebase": "^3.6.4",
     "node-sass": "^4.0.0",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-addons-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-hot-loader": "^1.3.1",
+    "react-motion": "^0.4.7",
+    "react-web-animation": "^0.1.2",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
