--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "firebase": "^3.6.4",
+    "lodash": "^4.17.4",
     "node-sass": "^4.0.0",
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-transition-group": "^15.4.1",
